fase5/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: artur-matos
  labels:
    owner: artur-paixao-de-matos
