fase5/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anime-services-ingress
  namespace: artur-matos
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /forum
        pathType: Prefix
        backend:
          service:
            name: forum-service
            port:
              number: 80
      - path: /reviews
        pathType: Prefix
        backend:
          service:
            name: review-service
            port:
              number: 80
